Make BoundFieldMatcher explicitly match only the name in the annotation