@@ -1,16 +1,16 @@
 /*******************************************************************************
  * This file is part of SPIFF.
- * 
+ *
  * SPIFF is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
- * 
+ *
  * SPIFF is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License
  * along with SPIFF.  If not, see <http://www.gnu.org/licenses/>.
  ******************************************************************************/
@@ -51,7 +51,7 @@ public class TestCaseClassBindingEventDispatcherGroupings {
 
 		Datatype xInst = new IntegerInstruction();
 		xInst.name = "x";
-		xInst.value = new Integer(3);
+		xInst.value = Integer.valueOf(3);
 
 		unit.notifyData(xInst);
 
@@ -91,7 +91,7 @@ public class TestCaseClassBindingEventDispatcherGroupings {
 
 		Datatype rootX = new IntegerInstruction();
 		rootX.name = "x";
-		rootX.value = new Integer(30);
+		rootX.value = Integer.valueOf(30);
 		unit.notifyData(rootX);
 
 		RootBinding binding = unit.getResult();
@@ -110,7 +110,7 @@ public class TestCaseClassBindingEventDispatcherGroupings {
 			unit.notifyGroup("listOfObjects", true);
 			Datatype xInst = new IntegerInstruction();
 			xInst.name = "x";
-			xInst.value = new Integer(i);
+			xInst.value = Integer.valueOf(i);
 
 			unit.notifyData(xInst);
 
